Tue Nov  4 16:46:56 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/GuardCondition/GuardConditionTest.cpp:

          Fixed warnings.

Mon Nov  3 16:20:00 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:

          Fixed incorrect string comparison(replace = with ==).

Sat Nov  1 16:18:46 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:

          Fixed compile error (now using fclose() instead of close()).

Sat Nov  1 07:54:55 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:
        * tests/DCPS/BuiltInTopicTest/prst_repo_run_test.pl:
        * tests/DCPS/BuiltInTopicTest/publisher.cpp:
        * tests/DCPS/BuiltInTopicTest/subscriber.cpp:

          Corrected file synch and updated some logging.

Fri Oct 31 23:01:18 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * DDS_release_notes.txt:

          Added entry for a deadlock fix in reliable multicast transport.

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:
        * tests/DCPS/BuiltInTopicTest/prst_repo_run_test.pl:
        * tests/DCPS/BuiltInTopicTest/publisher.cpp:
        * tests/DCPS/BuiltInTopicTest/run_test.pl:
        * tests/DCPS/BuiltInTopicTest/subscriber.cpp:

          Used file synch for qos change instead of using fixed time
          delay. This should fix prst_repo_run_test failure on some
          slow machines.

Fri Oct 31 19:16:26 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:
          Verify returned objects. Check DDS return codes.

Fri Oct 31 18:57:15 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/detail/EventHandler.cpp:

          Fixed a potential deadlock that send thread and reactor event