@@ -12,18 +12,41 @@ public class DataReaderListenerImpl extends DDS._DataReaderListenerLocalBase {
     public synchronized void on_data_available(DDS.DataReader reader) {
         ++num_reads_;
         MessageDataReader mdr = MessageDataReaderHelper.narrow(reader);
+	if (mdr == null) {
+	  System.err.println ("read: narrow failed.");
+	  return;
+	}
+
         MessageHolder mh = new MessageHolder(new Message());
         SampleInfoHolder sih = new SampleInfoHolder(new SampleInfo(0, 0, 0,
             new DDS.Time_t(), 0, 0, 0, 0, 0, 0, 0, false));
         int status  = mdr.take_next_sample(mh, sih);
 
 	if (status == RETCODE_OK.value) {
-	  System.out.println("Message: subject    = " + mh.value.subject);
-	  System.out.println("         subject_id = " + mh.value.subject_id);
-	  System.out.println("         from       = " + mh.value.from);
-	  System.out.println("         count      = " + mh.value.count);
-	  System.out.println("         text       = " + mh.value.text);
-	  System.out.println("SampleInfo.sample_rank = " + sih.value.sample_rank);
+
+	  System.out.println ("SampleInfo.sample_rank = "+ sih.value.sample_rank);
+	  System.out.println ("SampleInfo.instance_state = "+ sih.value.instance_state);
+
+	  if (sih.value.valid_data) {
+
+	    System.out.println("Message: subject    = " + mh.value.subject);
+	    System.out.println("         subject_id = " + mh.value.subject_id);
+	    System.out.println("         from       = " + mh.value.from);
+	    System.out.println("         count      = " + mh.value.count);
+	    System.out.println("         text       = " + mh.value.text);
+	    System.out.println("SampleInfo.sample_rank = " + sih.value.sample_rank);
+	  }
+	  else if (sih.value.instance_state == NOT_ALIVE_DISPOSED_INSTANCE_STATE.value) {
+	    System.out.println ("instance is disposed");
+	  }
+	  else if (sih.value.instance_state == NOT_ALIVE_NO_WRITERS_INSTANCE_STATE.value) {
+	    System.out.println ("instance is unregistered");
+	  }
+	  else {
+	    System.out.println ("DataReaderListenerImpl::on_data_available: "+
+				"received unknown instance state "+ sih.value.instance_state);
+	  }
+
 	} else if (status == RETCODE_NO_DATA.value) {
 	  System.err.println ("ERROR: reader received DDS::RETCODE_NO_DATA!");
 	} else {
